k3s_cluster/base/private/monitor/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: private
  labels:
    app: private-monitor-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-monitor-prometheus
  template:
    metadata:
      labels:
        app: private-monitor-prometheus
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      securityContext:
        fsGroup: 65534
      serviceAccountName: serviceaccount
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          imagePullPolicy: IfNotPresent
          # restartPolicy: Always
          ports:
            - containerPort: 9090
          args:
            - "--config.file=/etc/prometheus/prometheus.yaml"
            - "--storage.tsdb.path=/prometheus"
            - "--web.enable-lifecycle" # optional, for reload via API
          securityContext:
            capabilities:
              add:
                - CHOWN
          volumeMounts:
            - name: data
              mountPath: /prometheus
            - name: config
              mountPath: /etc/prometheus/prometheus.yaml
              subPath: prometheus.yaml
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: config
          configMap:
            name: prometheus-config
