k3s_cluster/base/private/monitor/prometheus/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: private
  labels:
    app: private-monitor-prometheus
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.monitor.private.home`)
      # middlewares:
      #   - name: private-middleware-auth-authentik
      services:
        - name: private-monitor-prometheus-service
          port: 4422
  # tls: {}
